# apollo3-device

./: .gitignore  CMakeLists.txt  main.cpp
board/: CMakeLists.txt  board.cpp
board/device/: CMakeLists.txt  device.hpp
board/device/apollo3/: ADC.hpp  APBDMA.hpp  BLEIF.hpp  CACHECTRL.hpp  CLKGEN.hpp  CTIMER.hpp  GPIO.hpp  GPIO.hpp.bak  IOM0.hpp  IOM1.hpp  IOM2.hpp  IOM3.hpp  IOM4.hpp  IOM5.hpp  IOSLAVE.hpp  MCUCTRL.hpp  MSPI.hpp  PDM.hpp  PWRCTRL.hpp  RSTGEN.hpp  RTC.hpp  SCARD.hpp  SECURITY.hpp  UART0.hpp  UART1.hpp  VCOMP.hpp  WDT.hpp  device.hpp  pin_types.hpp  register.hpp
board/device/tools/: generate_hal.py
board/device/tools/cpp17_templates/: device.hpp.in  peripheral.hpp.in
cmake/: cortex-m4f.cmake
